src/app/Home.module.css
#home {
  position: relative;
  height: auto;
  overflow: hidden;
}
.homeContainer {
  position: fixed;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}
/*-----------------------------------------
  SHARED RING STYLING
------------------------------------------*/
.ring {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  border-radius: 50%;
  background-color: black;
  transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease, top 1s ease, font-size 1s ease;
  transform: scale(1);
  position: absolute;
  overflow: visible;
}
.ringIcon {
  /* filter: drop-shadow(0 0 12px rgba(255, 204, 0, .5)); */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /* font-size: 20rem; */
  height: 60%;
  margin-bottom: 1rem;
  color: rgb(34, 34, 34);
}
.ring:hover .ringIcon {
  filter: blur(0px);
}
.ringIconBackground {
  height: 50%;
}
.purpleGlow .ringIcon {
  /* filter: drop-shadow(0 0 12px rgba(125, 0, 234, .7)); */
}
.greenGlow .ringIcon {
  /* filter: drop-shadow(0 0 8px rgba(183, 255, 150, 0.5)); */
}
.redGlow .ringIcon {
  left: 45%;
  /* filter: drop-shadow(0 0 12px rgba(234, 0, 0, 0.7)); */
}
.blueGlow .ringIcon {
  /* filter: drop-shadow(0 0 12px rgba(0, 164, 234, 0.7)); */
}
.yellowGlow .ringIcon {
  /* filter: drop-shadow(0 0 8px rgba(234, 195, 0, 0.5)); */
}
.ring p, .ring h1 {
  z-index: 1;
  margin: 0;
  white-space: nowrap;
}
.ring p {
  margin: 0;

  ;}
.ring h1 {
  margin: 1vw;
  /* font-size: 5vw; */
}
.ring:hover {
  transform: scale(1.1);
  cursor: pointer;
}
/*-----------------------------------------
  UNIQUE RING STYLING
------------------------------------------*/

.activeRing {
  position: absolute;
  font-size: 2vw;;
  top: 37%;
  left: 50%;
  width: 28vw;
  height: 28vw;
  margin-top: -14vw;
  margin-left: -14vw;
  /* padding-left: 3%;
  padding-right: 3%; */
  overflow: hidden;
}
.activeRing h1 {
  /* font-size: 3vw; */
  margin: 0;
  margin-bottom: 1rem;
}
.ringContainer {
  display: absolute;
  height: 100%;
  border-radius: 50%;
  width: 100%;
  padding-left: 3%;
  padding-right: 3%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
 .ringContainer:hover {
  /* filter: url(#water); */
  /* -webkit-filter: blur(2px); */
  transition: filter 2s ease;
}
.inactiveLeft {
  position: absolute;
  top: 38%;
  left: -7.5%;
  margin-top: -7.5vw;
  width: 15vw;
  height: 15vw;
  z-index: -1
}
.inactiveRight {
  position: absolute;
  top: 38%;
  left: 86%;
  margin-top: -7.5vw;
  width: 15vw;
  height: 15vw;
  margin-left: 7.5vw;
  margin-right: -7vw;
  z-index: -1;
}
.hidden {
  opacity: 0;
  display: hidden;
  left: 150%;
  z-index: -1;
  transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease top 1s ease;
}

.animateRing {
  animation: slideDownAcrossUp 2s ease forwards;
}
/*-----------------------------------------
  RING GLOW & PULSATE ANIMATION
------------------------------------------*/
@keyframes pulsateGreen {
  0% {box-shadow: 0 0 35px #00f38a;}
  50% { box-shadow: 0 0 130px #00f38a;}
  100% { box-shadow: 0 0 35px #00f38a; }
}

@keyframes pulsateRed {
  0% { box-shadow: 0 0 35px #ea005a; }
  50% { box-shadow: 0 0 150px #ea003e; }
  100% { box-shadow: 0 0 35px #ea005a; }
}
@keyframes pulsatePurple {
  0% { box-shadow: 0 0 35px #7d00ea; }
  50% { box-shadow: 0 0 150px #8100ea; }
  100% { box-shadow: 0 0 35px #6d00ea; }
}



@keyframes pulsateBlue {
  0% { box-shadow: 0 0 35px #00ccff; }
  50% { box-shadow: 0 0 130px #00ccff; }
  100% { box-shadow: 0 0 35px #00ccff; }
}

@keyframes pulsateYellow {
  0% { box-shadow: 0 0 35px #ffc70f; }
  50% { box-shadow: 0 0 130px #ffc70f; }
  100% { box-shadow: 0 0 35px #ffc70f; }
}
/* .greenGlow {
  border: 4px solid #17ff9a;
  box-shadow: 0 0 35px #00f38a;
  animation: pulsateGreen 4s infinite;
} */

.blueGlow {
  border: 4px solid #00ccff;
  box-shadow: 0 0 100px #004063;
  animation: pulsateBlue 3s infinite;
}
.yellowGlow {
  border: 4px solid #fff2b7;
  box-shadow: 0 0 35px #ff9e27;
  animation: pulsateYellow 3.5s infinite;
}
.redGlow {
  /* border: 2px solid #ffbd2e; */
  outline: 4px solid #fb0019;
  box-shadow: 0 0 50px 50px #fffa5d;
  animation: pulsateRed 4.5s infinite;
}
.greenGlow {
  border: 4px solid #a3ff84;
  box-shadow: 0 0 35px #00f38a;
  animation: pulsateGreen 4s infinite;
  background: black;
  position: absolute;
  z-index: 9999;
}
.purpleGlow {
  /* border: 2px solid #ffbd2e; */
  outline: 4px solid #7900fb;
  box-shadow: 0 0 30px 30px #805dff;
  animation: pulsatePurple 4.5s infinite;
}
/* .greenGlowBorder {
  width: calc(75vw + 12px);
  aspect-ratio: 1/1;
  transform: translate(15%, 23%);

  position: absolute;
  top: 0;
  left: 0;
  border-radius: 50%;
  z-index: -100
} */

@keyframes ripple {
  0% {
    transform: scale(1);
    opacity: 0.8;
  }
  100% {
    transform: scale(1.5);
    opacity: 0;
  }
}
@keyframes slideDownAcrossUp {
  0% {
    transform: translateY(0);
  }
  33% {
    transform: translateY(100vh); /* Move down below the viewport */
  }
  66% {
    transform: translateY(100vh) translateX(-150%); /* Move across to the left */
  }
  100% {
    transform: translateY(0) translateX(-150%); /* Move up into view */
  }
}
/*-----------------------------------------
  NAV ICONS
------------------------------------------*/
.leftNav, .rightNav {
  position: absolute;
  top: 32%;
  color: white;
  width: 6rem;
  height: 6rem;
  padding: 1rem;
  border-radius: 50%;
  transition: background-color .5s ease, transform 1s ease;

}
.leftNav:hover, .rightNav:hover {
  cursor: pointer;
  transform:scale(1.1);
  /* color:#00f38a; */
  border-radius: 50%;
  background-color: rgba(255, 255, 255, .2);
  transition: background-color .5s ease, transform 1s ease;
}
.leftNav {
  left: 15vw;
}
.rightNav {
  right: 18vw;
}

/*-----------------------------------------
  RING HEADER GRADIENTS
------------------------------------------*/

.greenGlow .ringHeader {
  background-image: linear-gradient(to right, rgb(0, 167, 56), #a1ff92);
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  display: inline;
}
.redGlow .ringHeader {
  background-image: linear-gradient(to right, rgb(255, 0, 30), #fd8711);
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  display: inline;
}
.blueGlow .ringHeader {
  background-image: linear-gradient(to right, #0078b9, rgb(0, 184, 212));
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  display: inline;
}
.yellowGlow .ringHeader {
  background-image: linear-gradient(to right, rgb(255, 253, 157), #ff9900);
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  display: inline;
}
.purpleGlow .ringHeader {
  background-image: linear-gradient(to right, rgb(182, 157, 255), #4e00b5);
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  display: inline;
}

.zoom-in {
  transform: scale(1.1);
  transition: transform 300ms ease-in-out;
}


/*-----------------------------------------
  MOBILE STYLING
------------------------------------------*/

@media (max-width: 768px) {
  .activeRing {
    position: absolute;
    top: 15%;
    left: 27%;
    width: 75vw;
    height: 75vw;
  }
  .inactiveLeft {
    position: absolute;
    top: 22%;
    left: -25%;
    width: 30vw;
    height: 30vw;
    font-size: 1rem;
    transform: translate(0%, 0%);
  }
  .inactiveLeft .ringheader {
    font-size: 0rem;
  }
  .inactiveRight {
    position: absolute;
    top: 22%;
    left: 88%;
    width: 30vw;
    height: 30vw;
    font-size: .25rem;
    margin-left: 7.5vw;
    margin-right: -7vw;
  }
  .inactiveRight p h2 {
    font-size: .25rem;
  }
  .leftNav, .rightNav {
    position: absolute;
    top: 55%;
    width: 8vw;
    height: 8vw;
    color: white;
  }
  .leftNav {
    left: 20vw;
  }
  .rightNav {
    right: 20vw;
  }
  .ringHeader {
    font-size: 8vw;
    margin: 0;
  }
  .ringText{
    font-size: 1.25rem;
    margin-top: -16;
  }
  .inactiveRight .ringText,
  .inactiveLeft .ringText {
      font-size: 0rem;
  }

  .inactiveRight .ringHeader,
  .inactiveLeft .ringHeader {
      font-size: 0.75rem;
  }
}

.ringZoom {
  transform: scale(6) !important;
  transition: transform 2.5s ease !important;
}


.ringZoom .ringHeader,
.ringZoom .ringText {
  opacity: 0;
  transition: opacity .75s ease;
}

